--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,28 +2,37 @@
 <div class="row">
     <div class="col-md-6">
       <h1>Registration</h1>
-      <form method="POST" action="/register">
+      <form method="POST" action="/save">
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email">
+          <label for="exampleInputEmail1">Username</label>
+          <input type="text" class="form-control" name="username">
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+          <input type="password" class="form-control" name="password">
         </div>
+        <h4>What are you signing up as?</h4>
+        <div class="form-group">
+          <select class="form-control" name="status">
+            <option type="text" name="status">Teacher</option>
+            <option type="text" name="status">Teacher Assistant</option>
+            <option type="text" name="status">Student</option>
+          </select>
+        </div>
+        <br />
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
     </div>
     <div class="col-md-6">
       <h1>Login</h1>
-      <form method="POST" action="/login">
+      <form method="POST" action="/check">
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email">
+          <label for="exampleInputEmail1">Username</label>
+          <input type="text" class="form-control" name="username">
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+          <input type="password" class="form-control" name="password">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
