--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,40 +1,47 @@
 {{msg}}
 <div class="row">
-    <div class="col-md-6">
-      <h1>Registration</h1>
-      <form method="POST" action="/save">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Username</label>
-          <input type="text" class="form-control" name="username">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" name="password">
-        </div>
-        <h4>What are you signing up as?</h4>
-        <div class="form-group">
-          <select class="form-control" name="status">
-            <option type="text" name="status">Teacher</option>
-            <option type="text" name="status">Teacher Assistant</option>
-            <option type="text" name="status">Student</option>
-          </select>
-        </div>
-        <br />
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-    </div>
-    <div class="col-md-6">
-      <h1>Login</h1>
-      <form method="POST" action="/check">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Username</label>
-          <input type="text" class="form-control" name="username">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" name="password">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-    </div>
+  <div class="col-md-6">
+    <h1>Registration</h1>
+    <form method="POST" action="/save">
+      <div class="form-group">
+        <label for="exampleInputEmail1">First Name</label>
+        <input type="text" class="form-control" name="firstname">
+      </div><div class="form-group">
+        <label for="exampleInputEmail1">Last Name</label>
+        <input type="text" class="form-control" name="lastname">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Username</label>
+        <input type="text" class="form-control" name="username">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" name="password">
+      </div>
+      <div class="form-group">
+        <label>Status</label>
+        <select type="text" class="form-control" name="status">
+          <option>Teacher</option>
+          <option>Teacher Assistant</option>
+          <option>Student</option>
+        </select>
+      </div>
+      <br />
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
   </div>
+  <div class="col-md-6">
+    <h1>Login</h1>
+    <form method="POST" action="/check">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Username</label>
+        <input type="text" class="form-control" name="username">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" name="password">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+  </div>
+</div>
