--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,47 +1,22 @@
 {{msg}}
 <div class="row">
+  <div class="col-md-12">
+    <div class="jumbotron">
+      <h1>Welcome to Classroom Portal</h1>
+    </div>
+  </div>
   <div class="col-md-6">
     <h1>Registration</h1>
-    <form method="POST" action="/save">
-      <div class="form-group">
-        <label for="exampleInputEmail1">First Name</label>
-        <input type="text" class="form-control" name="firstname">
-      </div><div class="form-group">
-        <label for="exampleInputEmail1">Last Name</label>
-        <input type="text" class="form-control" name="lastname">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Username</label>
-        <input type="text" class="form-control" name="username">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" name="password">
-      </div>
-      <div class="form-group">
-        <label>Status</label>
-        <select type="text" class="form-control" name="status">
-          <option>Teacher</option>
-          <option>Teacher Assistant</option>
-          <option>Student</option>
-        </select>
-      </div>
-      <br />
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    <p>
+      You must register to be included in the system.
+    </p>
+    <a type="submit" class="btn btn-default" href="/register">Register</a>
   </div>
   <div class="col-md-6">
     <h1>Login</h1>
-    <form method="POST" action="/check">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Username</label>
-        <input type="text" class="form-control" name="username">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" name="password">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    <p>
+      Login to access your information.
+    </p>
+    <a type="submit" class="btn btn-default" href="/login">Login</a>
   </div>
 </div>
