seperated teacher and student reg and login. Now i have to make seperate dbs

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,5 @@
 <h1>Home Page</h1>
-<h2>Hello there {{ user.username }}</h2>
+<h2>Hello there {{ user.firstname }} {{ user.lastname }}</h2>
+<h3>Your username is {{ user.username }}</h3>
+<h3>You are a {{ user.status }}</h3>
+
