--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,13 +10,15 @@
     <p>
       You must register to be included in the system.
     </p>
-    <a type="submit" class="btn btn-default" href="/register">Register</a>
+    <a type="submit" class="btn btn-default" href="/teacher-registration">Register as a Teacher</a>
+    <a type="submit" class="btn btn-default" href="/student-registration">Register as a Student</a>
   </div>
   <div class="col-md-6">
     <h1>Login</h1>
     <p>
       Login to access your information.
     </p>
-    <a type="submit" class="btn btn-default" href="/login">Login</a>
+    <a type="submit" class="btn btn-default" href="/teacher-login">Teacher Login</a>
+    <a type="submit" class="btn btn-default" href="/student-login">Student Login</a>
   </div>
 </div>
