--- a/views/student-login.handlebars
+++ b/views/student-login.handlebars
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="jumbotron">
-      <h1>Loginl</h1>
+      <h1>Student Login</h1>
     </div>
   </div>
   <div class="col-md-6">
