--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Class App</a>
+        <a class="navbar-brand" href="/">Class App</a>
       </div>
     </div>
     </nav>
