--- a/views/teacher-registration.handlebars
+++ b/views/teacher-registration.handlebars
@@ -2,7 +2,7 @@
 <div class="row">
  <div class="col-md-12">
     <div class="jumbotron">
-      <h1>Registration</h1>
+      <h1>Teacher Registration</h1>
     </div>
   </div>
 </div>
@@ -26,11 +26,10 @@
         <input type="password" class="form-control" name="password">
       </div>
       <div class="form-group">
-        <label>Status</label>
-        <select type="text" class="form-control" name="status">
+        <label>Teacher/TA</label>
+        <select type="text" class="form-control" name="teachOrTA">
           <option>Teacher</option>
           <option>Teacher Assistant</option>
-          <option>Student</option>
         </select>
       </div>
       <br />
