--- a/views/student-registration.handlebars
+++ b/views/student-registration.handlebars
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-    <form method="POST" action="/save">
+    <form method="POST" action="/saveForStudent">
       <div class="form-group">
         <label for="exampleInputEmail1">First Name</label>
         <input type="text" class="form-control" name="firstname">
@@ -24,14 +24,6 @@
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" name="password">
-      </div>
-      <div class="form-group">
-        <label>Status</label>
-        <select type="text" class="form-control" name="status">
-          <option>Teacher</option>
-          <option>Teacher Assistant</option>
-          <option>Student</option>
-        </select>
       </div>
       <br />
       <button type="submit" class="btn btn-default">Submit</button>
