--- a/views/teacher-registration.handlebars
+++ b/views/teacher-registration.handlebars
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-    <form method="POST" action="/save">
+    <form method="POST" action="/saveForTeacher">
       <div class="form-group">
         <label for="exampleInputEmail1">First Name</label>
         <input type="text" class="form-control" name="firstname">
